Thu May 27 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSArchiver.m: Fix memory leak reported by
	frederic.chauvin@lemel.fr and ready for garbage collection.
	* Source/NSUnarchiver.m: Ready for garbage collection.
	* Source/NSCalendarDate.m: Fix memory leak reported by
	frederic.chauvin@lemel.fr.  Fix bug in decrementing date past start
	of month.  Ready for garbage collection.

Wed May 26 18:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSSerialization.h: include NSObject.h
	* Source/NSSerializer.m: Deserialization optimisation (15%)
	* Source/NSArray.m: write descriptions to cstrings.
	* Source/NSDictionary.m: write descriptions to cstrings.
	* Source/NSGCString.m: description optimisation (15%).

Wed May 26 12:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUnarchiver.m: Fixed libobjects compatibility methods to
	use decodeObject to get the name from the archive.

Sun May 23 20:38:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/TcpPort.m: Fixed retain/release loop causing ports occasionally
	to be kept in existence when they should disappear.

Fri May 21 19:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSObject.h: Added NSExtraRefCount()
	* Source/NSObject.m: Added NSExtraRefCount()

Fri May 21 16:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSThread.h: Update notification names to MacOS-X
	with defines for OpenStep compatibility.
	* Source/NSThread.m: Update notification names to MacOS-X
	* Source/externs.m: Update thread notification names to MacOS-X

Fri May 21 16:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSZone.h: Added NSZoneMallocAtomic() for Helge
	and in anticipation of adding garbage collection support some day.

Fri May 21  9:56:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
